--- a/package.json
+++ b/package.json
@@ -1,23 +1,74 @@
 {
-  "name": "commoditysl",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~49.0.8",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+   "name": "commoditysl",
+   "version": "1.0.0",
+   "main": "node_modules/expo/AppEntry.js",
+   "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web",
+      "format:fix": "prettier --write ."
+   },
+   "dependencies": {
+      "@expo-google-fonts/poppins": "^0.2.3",
+      "@expo/config-plugins": "^7.2.2",
+      "@expo/prebuild-config": "^6.2.4",
+      "@expo/vector-icons": "^13.0.0",
+      "@react-native-async-storage/async-storage": "1.18.2",
+      "@react-native-community/datetimepicker": "7.2.0",
+      "@react-native-community/netinfo": "9.3.10",
+      "@react-navigation/drawer": "^6.6.3",
+      "@react-navigation/native": "^6.1.7",
+      "@react-navigation/native-stack": "^6.9.13",
+      "@rneui/base": "^4.0.0-rc.8",
+      "@rneui/themed": "^4.0.0-rc.8",
+      "axios": "^1.5.0",
+      "expo": "~49.0.8",
+      "expo-app-loading": "^2.1.1",
+      "expo-av": "~13.4.1",
+      "expo-camera": "~13.4.2",
+      "expo-dev-client": "~2.4.8",
+      "expo-device": "~5.4.0",
+      "expo-file-system": "~15.4.3",
+      "expo-font": "~11.4.0",
+      "expo-image-manipulator": "~11.3.0",
+      "expo-image-multiple-picker": "^4.8.3",
+      "expo-image-picker": "~14.3.2",
+      "expo-linking": "~5.0.2",
+      "expo-media-library": "~15.4.1",
+      "expo-network": "~5.4.0",
+      "expo-notifications": "~0.20.1",
+      "expo-status-bar": "~1.6.0",
+      "jwt-decode": "^3.1.2",
+      "moment": "^2.29.4",
+      "prettier": "^3.0.3",
+      "react": "18.2.0",
+      "react-native": "0.72.4",
+      "react-native-countdown-circle-timer": "^3.2.1",
+      "react-native-emoji-selector": "^0.2.0",
+      "react-native-gesture-handler": "~2.12.0",
+      "react-native-gifted-chat": "^2.4.0",
+      "react-native-modal-datetime-picker": "^17.1.0",
+      "react-native-pager-view": "6.2.0",
+      "react-native-paper": "^5.10.3",
+      "react-native-paper-tabs": "^0.10.1",
+      "react-native-pell-rich-editor": "^1.9.0",
+      "react-native-phone-number-input": "^2.1.0",
+      "react-native-reanimated": "~3.3.0",
+      "react-native-render-html": "^6.3.4",
+      "react-native-safe-area-context": "4.6.3",
+      "react-native-screens": "~3.22.0",
+      "react-native-svg": "13.9.0",
+      "react-native-webview": "13.2.2",
+      "react-redux": "^8.1.2",
+      "redux": "^4.2.1",
+      "redux-thunk": "^2.4.2",
+      "socket.io-client": "^4.7.2"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.20.0",
+      "@types/react": "~18.2.14",
+      "typescript": "^5.1.3"
+   },
+   "private": true
 }
