--- a/eas.json
+++ b/eas.json
@@ -5,12 +5,17 @@
    "build": {
       "development": {
          "developmentClient": true,
-         "distribution": "internal"
+         "distribution": "internal",
+         "channel":"staging"
       },
       "preview": {
-         "distribution": "internal"
+         "distribution": "internal",
+         "channel":"staging"
       },
-      "production": {}
+      "production": {
+         "channel":"production"
+
+      }
    },
    "submit": {
       "production": {}
