--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "expo-network": "~5.4.0",
       "expo-notifications": "~0.20.1",
       "expo-status-bar": "~1.6.0",
+      "expo-updates": "~0.18.12",
       "jwt-decode": "^3.1.2",
       "moment": "^2.29.4",
       "prettier": "^3.0.3",
