--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "expo-notifications": "~0.20.1",
       "expo-status-bar": "~1.6.0",
       "expo-updates": "~0.18.12",
+      "firebase": "^10.3.1",
       "jwt-decode": "^3.1.2",
       "moment": "^2.29.4",
       "prettier": "^3.0.3",
@@ -49,6 +50,7 @@
       "react-native-emoji-selector": "^0.2.0",
       "react-native-gesture-handler": "~2.12.0",
       "react-native-gifted-chat": "^2.4.0",
+      "react-native-image-slider-box": "^2.0.7",
       "react-native-modal-datetime-picker": "^17.1.0",
       "react-native-pager-view": "6.2.0",
       "react-native-paper": "^5.10.3",
