--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "expo-network": "~5.4.0",
       "expo-notifications": "~0.20.1",
       "expo-status-bar": "~1.6.0",
+      "expo-task-manager": "~11.3.0",
       "expo-updates": "~0.18.12",
       "firebase": "^10.3.1",
       "jwt-decode": "^3.1.2",
@@ -59,6 +60,7 @@
       "react-native-phone-number-input": "^2.1.0",
       "react-native-reanimated": "~3.3.0",
       "react-native-render-html": "^6.3.4",
+      "react-native-rsa-native": "^2.0.5",
       "react-native-safe-area-context": "4.6.3",
       "react-native-screens": "~3.22.0",
       "react-native-svg": "13.9.0",
