--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
       "expo-task-manager": "~11.3.0",
       "expo-updates": "~0.18.12",
       "firebase": "^10.3.1",
+      "hybrid-crypto-js": "^0.2.4",
+      "js-crypto-rsa": "^1.0.7",
       "jwt-decode": "^3.1.2",
       "moment": "^2.29.4",
       "prettier": "^3.0.3",
