--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
       "react-native-rsa-native": "^2.0.5",
       "react-native-safe-area-context": "4.6.3",
       "react-native-screens": "~3.22.0",
+      "react-native-snap-carousel": "^3.9.1",
       "react-native-svg": "13.9.0",
       "react-native-webview": "13.2.2",
       "react-redux": "^8.1.2",
@@ -75,6 +76,7 @@
    "devDependencies": {
       "@babel/core": "^7.20.0",
       "@types/react": "~18.2.14",
+      "@types/react-native-snap-carousel": "^3.8.7",
       "typescript": "^5.1.3"
    },
    "private": true
