--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
       "expo": "~49.0.8",
       "expo-app-loading": "^2.1.1",
       "expo-av": "~13.4.1",
-      "expo-camera": "~13.4.2",
-      "expo-dev-client": "~2.4.8",
+      "expo-camera": "~13.4.4",
+      "expo-dev-client": "~2.4.12",
       "expo-device": "~5.4.0",
       "expo-file-system": "~15.4.3",
       "expo-font": "~11.4.0",
@@ -40,7 +40,7 @@
       "expo-notifications": "~0.20.1",
       "expo-status-bar": "~1.6.0",
       "expo-task-manager": "~11.3.0",
-      "expo-updates": "~0.18.12",
+      "expo-updates": "~0.18.17",
       "firebase": "^10.3.1",
       "hybrid-crypto-js": "^0.2.4",
       "js-crypto-rsa": "^1.0.7",
@@ -48,7 +48,7 @@
       "moment": "^2.29.4",
       "prettier": "^3.0.3",
       "react": "18.2.0",
-      "react-native": "0.72.4",
+      "react-native": "0.72.6",
       "react-native-countdown-circle-timer": "^3.2.1",
       "react-native-emoji-selector": "^0.2.0",
       "react-native-gesture-handler": "~2.12.0",
@@ -67,6 +67,7 @@
       "react-native-screens": "~3.22.0",
       "react-native-snap-carousel": "^3.9.1",
       "react-native-svg": "13.9.0",
+      "react-native-toast-notifications": "^3.4.0",
       "react-native-webview": "13.2.2",
       "react-redux": "^8.1.2",
       "redux": "^4.2.1",
